# pytest-result-sender

./: .flake8  pyproject.toml
src/pytest_result_sender/: plugin.py
