[project]
name = "pytest-result-sender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hertz", email = "1553398021@qq.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"