[project]
name = "pytest-result-sender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hertz", email = "1553398021@qq.com"},
]
dependencies = [
    "pytest>=8.0.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
[tool.pdm.dev-dependencies]
dev = [
    "black>=24.2.0",
    "isort>=5.13.2",
    "flake8>=5.0.4",
]

[tool.black]
exclude = '''
/(
    \.git
    | \.hg
    | \.tox
    | venv
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pdm.scripts]
check = {composite = ["flake8 .", "isort .", "black ."]}

test = "pytest"